--- a/Activity4/templates/base.html
+++ b/Activity4/templates/base.html
@@ -15,7 +15,7 @@
     </head>
 <body>           
     <nav class="navbar navbar-expand-md navbar-light bg light">
-        <a class="navbar-brand" href="{{ url_for('index')}}"></a>
+        <a class="navbar-brand"></a>
         <a class="navbar-brand fa fa-edit" id="act1" href="{{ url_for('index2')}}">Activity 1</a>
         <a class="navbar-brand fa fa-user-circle" id="act2" href="{{ url_for('index3')}}">Activity 2</a>
         <a class="navbar-brand fa fa-square-o" id="act3" href="{{ url_for('index4')}}">Activity 3</a>
